# download-toolbox

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  authors.rst  conf.py  contributing.rst  download_toolbox.base.rst  download_toolbox.data.interfaces.rst  download_toolbox.data.rst  download_toolbox.md  download_toolbox.rst  download_toolbox.tests.rst  downloaders.md  history.rst  index.md  index.rst  installation.rst  make.bat  modules.rst  readme.rst  requirements.txt  usage.md  usage.rst
docs/download_toolbox/: base.md  cli.md  config.md  dataset.md  download.md  interface.md  location.md  time.md  utils.md
docs/download_toolbox/data/: amsr.md  cds.md  esgf.md  osisaf.md  utils.md
download_toolbox/: __init__.py  base.py  cli.py  config.py  dataset.py  download.py  interface.py  location.py  process.py  producers.py  time.py  utils.py
download_toolbox/data/: __init__.py  amsr.py  aws.py  cds.py  cmems.py  esgf.py  mars.py  osisaf.py  producers.py  utils.py
download_toolbox/data/era5-aws/: ds633.0.e5.oper.an.pl.grib1.table.web.txt  ds633.0.e5.oper.an.sfc.grib1.table.web.txt  ds633.0.e5.oper.an.vinteg.grib1.table.web.txt  ds633.0.e5.oper.fc.sfc.accumu.grib1.table.web.txt  ds633.0.e5.oper.fc.sfc.instan.grib1.table.web.txt  ds633.0.e5.oper.invariant.grib1.table.web.txt
download_toolbox/data/interfaces/: cds.py  cmems.py  downloader.py  esgf.py  mars.py  utils.py
download_toolbox/data/sic/: amsr.py  osisaf.py
download_toolbox/masks/: mask.py
download_toolbox/tests/: __init__.py  test_entry_points.py  test_mod.py
